# parabfit

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
config/: intel-dbg.cmake  mic-dbg.cmake  mic-opt.cmake  nag-dbg.cmake
examples/flow/: box.json  dc.json  diagplane.json  dropping_sphere.json  ds.json  ds_scaling.json  dsmulti.json  multi_box.json  multi_channel.json  plane.json  rayleigh_taylor.json  single_channel.json  sphere.json
examples/hc/: attr  ex1.json  gmvrc  host_launch.sh  mesh1-coarse.exo  mesh1-medium.exo  mesh1.exo  mesh1.jou  mesh2.exo  mic_launch.sh
petaca/: CMakeLists.txt  COPYRIGHT  README.pececillo
petaca/src/: timer_tree_type.F90  yajl_ext.c  yajl_fort.F90
petaca/test/parameter_list_type/: test_any_scalar_type.F90
run/meshes/: cube_20_tet.exo
src/: CMakeLists.txt
src/flow/: CMakeLists.txt  NS_solver_type.F90  flow_main.F90  flow_sim_type.F90  vof_solver_type.F90
src/flow/test/: CMakeLists.txt
src/hc/: CMakeLists.txt  HC_AE_solver_type.F90  HC_idaesol_model_type.F90  HC_main.F90  HC_model_type.F90  HC_norm_type.F90  HC_precon_type.F90  HC_sim_type.F90  HC_solver_type.F90
src/hc/test/: test_HC_AE_solver_type.F90
src/lib/: CMakeLists.txt  README.txt  analytic_surface_type.F90  array_utils.F90  bc_factory_type.F90  bfgs_min_class.F90  bitfield_type.F90  bndry_face_func_type.F90  bndry_func_class.F90  body_force_module.F90  brent_min_class.F90  brent_module.F90  brent_root_class.F90  cell_geometry.F90  cell_topology.F90  const_scalar_func_type.F90  consts.F90  csr_matrix_type.F90  csr_precon_boomer_type.F90  csr_precon_class.F90  csr_precon_ssor_type.F90  curvature.F90  curvature_fit_func.F90  curvature_hf.F90  cylinder_region_type.F90  data_layout_type.F90  differential_operators_module.F90  driver.F90  ellipsoid_region_type.F90  exodus_c_binding.F90  exodus_file_type.F90  f90_assert.F90  f90_assert.fpp  fhypre.F90  fill_region_type.F90  fischer_guess_type.F90  fit_normals.F90  flux_volume_module.F90  fptr_scalar_func_type.F90  gmvwrite.c  (+66 more)
src/lib/flow/: body_force_module.F90
src/lib/test/: CMakeLists.txt  test_analytic_parabola_curvature.F90  test_hypre_hybrid_type.F90
src/parabfit/: CMakeLists.txt  curvature_tests.F90  parabfit_main.F90  surface_type_test.F90  vof_io.F90
src/unit/: CMakeLists.txt  analytic_surface_type_test.F90  bfgs_min_class_test.F90  curvature_tests.F90  cylinder.json  ellipsoid.json  interface_point_test.F90  locate_plane_nd_test.F90  locate_plane_test.F90  multimat_cell_type_test.F90  normal_vector_test.F90  parabfit_main.F90  plane.json  polygon_type_test.F90  polyhedron_type_test.F90  sinusoid.json  sphere.json  surface_type_test.F90  unit_test.F90  vof_init_test.F90  vof_io.F90  vof_solver_type_test.F90  volume_track_nd_test.F90  volume_track_test.F90
